Feat: add way point button add actions

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   --color-mint: #098483;
   --color-text: #000;
   --color-white: #fff;
+  --color-desctructive: #ff4d4f;
+
   --color-bg: #f4f6f9;
   --color-border: #e0e0e0;
 
