--- a/src/pages/form/FormPage.module.css
+++ b/src/pages/form/FormPage.module.css
@@ -10,7 +10,7 @@
   background-color: var(--color-white);
   width: 405px;
   padding: 45px 30px;
-  border: 1px solid var();
+  border: 1px solid var(--color-border);
   border-radius: 10px;
   box-shadow: 0 4px 8px var(--color-border);
   display: flex;
@@ -37,6 +37,58 @@
 }
 
 .button {
+  background: var(--color-mint);
+  color: var(--color-white);
+  font-size: var(--font-md);
+  border: none;
+  border-radius: 23px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.addPoint {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.addPoint span {
+  color: var(--color-mint);
+  font-size: var(--font-md);
+}
+
+.modalBody {
+  background-color: var(--color-white);
+  padding: 45px 30px;
+  border: 1px solid var(--color-border);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.modalHeader {
+  display: flex;
+  flex-direction: column;
+}
+
+.modalActions {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+}
+
+
+.modalActions button:first-child {
+  background: var(--color-desctructive);
+  color: var(--color-white);
+  font-size: var(--font-md);
+  border: none;
+  border-radius: 23px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.modalActions button:last-child {
   background: var(--color-mint);
   color: var(--color-white);
   font-size: var(--font-md);
