--- a/src/components/coordinate-field/CoordinateField.module.css
+++ b/src/components/coordinate-field/CoordinateField.module.css
@@ -21,6 +21,7 @@
   border: 1px solid var(--color-text);
   font-size: var(--font-md);
   border-radius: 50px;
+  cursor: pointer;
 }
 
 .input:focus {
