Feat: add route

--- a/src/pages/form/FormPage.module.css
+++ b/src/pages/form/FormPage.module.css
@@ -45,6 +45,10 @@
   padding: 10px;
   cursor: pointer;
 }
+.button:disabled {
+  opacity: 50%;
+  cursor: not-allowed;
+}
 
 .addPoint {
   display: flex;
