--- a/src/pages/simulation/SimulationPage.module.css
+++ b/src/pages/simulation/SimulationPage.module.css
@@ -1,6 +1,16 @@
 
+.container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
 
-.mapContainer {
-  height: "100vh";
-  width: "100%";
+.infoPanel {
+  position: absolute;
+  top: 20px;
+  left: 100px;
+  right: 50px;
+  display: flex;
+  justify-content: space-between;
+  z-index: 9999;
 }
