--- a/src/components/coordinate-field/CoordinateField.module.css
+++ b/src/components/coordinate-field/CoordinateField.module.css
@@ -5,21 +5,21 @@
 }
 
 .label {
-  background-color: white;
+  background-color: var(--color-white);
+  font-size: var(--font-sm);
   padding: 4px;
   margin-bottom: 0.25rem;
   font-weight: 600;
   font-size: 1rem;
   position: absolute;
-  top: -13px;
+  top: -15px;
   left: 20px;
-  font-size: var(--font-sm);
 }
 
 .input {
-  padding: 10px 40px 10px 20px;
   border: 1px solid var(--color-text);
   font-size: var(--font-md);
+  padding: 10px 40px 10px 20px;
   border-radius: 50px;
   cursor: pointer;
 }
